[package]
name = "transproblem-rs"
version = "0.1.1"
description = "Application for solving transportation problem."
repository = "https://github.com/D101101/transproblem-rs"
authors = ["Veselkov Sergey <veselkovsd@yandex.ru>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["transportation", "problem"]

[lib]
name = "transproblem"

[dependencies]
prettytable-rs = "0.5.2"
getopts = "0.2.14"
