[package]
name = "transproblem-rs"
version = "0.1.2"
description = "Application for solving transportation problem."
repository = "https://github.com/vessd/transproblem-rs"
authors = ["Sergey Veselkov <veselkovsd@yandex.ru>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["transportation", "problem"]

[dependencies]
prettytable-rs = "0.6.6"
getopts = "0.2.14"
